[patch.crates-io]
# Nats with the tcp stream timeout fix: CAS-1192
nats = { git = "https://github.com/openebs/nats.rs", rev="main_fixes" }

[profile.dev]
panic = "abort"

[workspace]
members = [
	"jsonrpc",
	"libnvme-rs",
	"io-engine",
    "io-engine-bench",
	"rpc/mayastor-api",
    "mbus-api",
	"sysfs",
	"spdk-rs",
	"utils/io-engine-dependencies/version-info",
	"utils/io-engine-dependencies/composer",
	"utils/io-engine-dependencies/devinfo",
	"utils/io-engine-dependencies/nvmeadm",
]
